gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-extern_types.rs
extern {
    type T; // { dg-error ".E0658." "" { target *-*-* } }
}

fn main() {}

